Api is now ready to exec by simply executing init.sh

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-LEGACY_DATABASE_URL=mysql+mysqlconnector://root:usuario@localhost:3306/repobase
+LEGACY_DATABASE_URL=mysql+mysqlconnector://root:parkapp@localhost:3306/repobase
